--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nativescript-angular": "~8.2.0",
     "nativescript-drop-down": "^5.0.4",
     "nativescript-theme-core": "~1.0.6",
+    "nativescript-ui-autocomplete": "^6.0.1",
     "nativescript-ui-listview": "^8.0.1",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
